--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # build output
-dist/
-.output/
+_site/
+
+# 11ty fetch cache directory
+.cache/
 
 # dependencies
 node_modules/
@@ -11,10 +13,13 @@ yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 
-
 # environment variables
 .env
+.env.local
 .env.production
 
 # macOS-specific files
 .DS_Store
+
+# tailwind built css
+*.out.css
