convert most pages to webc

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.1",
   "description": "Ben Smith's website",
   "scripts": {
+    "debug": "DEBUG=Eleventy* npm run dev",
     "dev": "concurrently \"npm:dev:*\"",
     "dev:tailwind": "tailwindcss -i src/assets/styles.css -o _site/assets/styles.css --watch",
     "dev:eleventy": "eleventy --serve",
