--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,8 +1,11 @@
 {
   "$schema": "https://json.schemastore.org/jsconfig.json",
   "compilerOptions": {
-    "checkJs": true
+    "checkJs": true,
+    "allowJs": true,
+    "strict": false,
+    "noEmit": true
   },
-  "include": ["eleventy.config.js", "src/**/*.js"],
+  "include": ["eleventy.config.js", "src/**/*.js", "global.d.ts"],
   "exclude": ["node_modules", "**/node_modules/*"]
 }
