disabled prettier for webc and removed all self-closing tags
[See this Jake Archibald article](https://jakearchibald.com/2023/against-self-closing-tags-in-html/) on why self-closing tags that Prettier auto-formats to are actually not part of the spec

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "debug:dev": "DEBUG=Eleventy* npm run dev",
     "debug:prod": "DEBUG=Eleventy* npm run build",
-    "dev": "eleventy --incremental --watch --serve",
+    "dev": "eleventy --watch --serve",
     "build": "rm -rf _site && eleventy",
     "preview": "npm run build && http-server -p 2323 _site",
     "postinstall": "patch-package"
